2010-12-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Address compiler warnings discovered with hardening flags on gcc 4.4.
	Make hardening flags default.

	* cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c
	(read_sysctl_maxsysfd): Check return value of fscanf.

	* configure.in: Add hardening flags to default flags.

	* configure: Regenerated.

	* openvassd/locks.c (file_lock, file_locked): Check return values of
	calls to write and read.

	* openvassd/nasl_plugins.c (nasl_thread): Catch result of call to
	nice. Added todo for checking the return value.

	* openvassd/nes_plugins.c (nes_thread): Catch result of call to nice.
	Added todo for checking the return value.

	* openvassd/openvassd.c (scanner_thread): Catch result of call to
	nice. Added todo for checking the return value.

	* openvassd/save_kb.c (save_kb_load_kb): Check return value of call to
	fgets.

2010-12-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Stop logging debug messages during the handling of shared sockets
	unless DEBUG is defined.

	* openvassd/shared_socket.c (openvassd_shared_socket_register,
	openvassd_shared_socket_acquire, openvassd_shared_socket_release,
	shared_socket_cleanup_process): Stop shared_socket.c from being too
	verbose by wrapping debugging output in an #ifdef DEBUG.

	* openvassd/pluginlaunch.c (read_running_processes): Only log debug
	message if DEBUG is defined.

2010-12-06  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.2.0.beta3.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Increased PROJECT_NUMBER accordingly.

2010-12-06  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.2+beta2 release.

	* VERSION: Set to 3.2.0.beta2.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2010-12-03  Michael Wiegand <michael.wiegand@greenbone.net>

	* openvassd/attack.c (init_host_kb): Initialize host_network_results
	as suggested by Matthew Mundell.
